templates/ingress/vine-ingress/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: vine
  namespace: ingress
spec:
  type: ExternalName
  externalName: ingress-nginx-controller.vine.svc.ops.netai-cloud
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
